--- a/MstrWrksStudio/Views/Account/Login.cshtml
+++ b/MstrWrksStudio/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using MstrWrksStudio.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Please log in to use this feature, or create an account.";
 }
 
 <h2>@ViewBag.Title.</h2>
