--- a/MstrWrksStudio/Views/Home/Index.cshtml
+++ b/MstrWrksStudio/Views/Home/Index.cshtml
@@ -3,29 +3,40 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Welcome to MstrWrks</h1>
+    <p class="lead">MstrWrks is a platform for you to organize your ideas and tasks in order to maintain a fluid workflow, whether as an individual or part of a team!</p>
 </div>
-
+<!--Headings changed to describe the system-->
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Individual</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Working on something BIG?
+            Put your thoughts into channels that are easy to track and maintain.
+            Need to make a quick to-do list so that you don't miss a beat?
+            MstrWrks let's you organize and complete lists on the fly.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Teams</h2>
+        <p>
+            Have the A-Team assembled to change the world for the better?
+            Organizations are coming soon, so your team can collaborate in real-time, work on items and check things off
+            together, as an on point and synchronized unit!
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Create Your MstrWrk</h2>
+        <p>It's free for individuals, so sign up for an account if you don't have one!</p>
+    </div>
+</div>
+<br />
+<br />
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
+        <div>
+            <button type="button" class="btn btn-lg btn-default btn-block">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</button>
+            <button type="button" class="btn btn-lg btn-default btn-block">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</button>           
+        </div>
     </div>
 </div>
